# risk_control_assessment_agentic_solution

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  IAC_FIX_PROMPT.md  Makefile  README.md  SECURITY.md  docker-compose.local.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: errors.py  llm_client.py  main.py
backend/app/config/: constants.py  questions.yaml  settings.py
backend/app/infra/: db.py  redis_client.py
backend/app/middleware/: auth.py  permissions.py  security_headers.py
backend/app/routes/: admin.py  admin_audit.py  approvals.py  assessments.py  chat.py  collaborators.py  controls.py  controls_catalog.py  documents.py  health.py  notifications.py  preparation.py  questionnaire.py  risks.py  settings.py  taxonomy_management.py
backend/app/services/: ao_overview.py  ao_profile.py  chunker.py  controls_effectiveness.py  document_parser.py  fraud_surface.py  inherent_risk.py  orchestration.py  qa_engine.py  residual_risk.py  risk_applicability.py
backend/app/utils/: risk_scope.py
backend/tests/: conftest.py  test_assessments_crud.py  test_controls_effectiveness.py  test_data_flow.py  test_inherent_risk.py  test_residual_risk.py  test_risk_applicability.py
backend/tests/test_integration/: test_assessment_flow.py  test_tenant_isolation.py
backend/tests/test_routes/: test_agent.py  test_assessments.py  test_controls.py  test_controls_catalog_upload.py  test_documents.py  test_documents_step1.py  test_health.py  test_preparation.py  test_profile.py  test_questionnaire.py  test_risks.py  test_taxonomy_management.py
backend/tests/test_services/: test_permissions.py  test_roles.py  test_session.py  test_step1_2_services.py
backend/tests/test_utils/: test_risk_scope.py
docs/: API.md  (+7 more)
(+163 files in other folders)
